[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "os-all", "fs-all", "protocol-all", "path-all", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize"] }
id3 = "1.8.0"
rodio = "0.17.3"
lazy_static = "1.4.0"
axum = "0.6.18"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "cors"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
